# NPLMWv2

./: .dockerignore  Dockerfile  compose.yaml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c0c07e2d2583_initial_tables.py
backend/app/: main.py  worker.py
backend/app/core/: auth.py  database.py  deps.py  models.py  security.py  settings.py
backend/app/drivers/: base_netmiko.py  router_ios.py  switch.py
backend/app/routers/: cisco_ios.py  device.py  user.py
backend/app/schemas/: device_schema.py  message_schema.py  netmiko_schemas.py  token_schema.py  user_schema.py
backend/app/use_cases/: device.py  user.py
